--- a/frontend/courses.html
+++ b/frontend/courses.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Study Notes & Resources - SVES College Harugeri">
-    <title>Notes & Resources | SVES College</title>
+    <meta name="description" content="Academic Courses Offered - SVES College Harugeri">
+    <title>Courses Offered | SVES College</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -124,104 +124,178 @@
             }
         }
 
-        .notes-header {
-            background: linear-gradient(rgba(0, 35, 71, 0.9), rgba(0, 35, 71, 0.9)), url('assets/images/notes-bg.jpg');
+        /* Header Dropdown Styling */
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background: var(--white);
+            min-width: 200px;
+            box-shadow: var(--shadow-lg);
+            border-radius: var(--radius-sm);
+            padding: 10px 0;
+            z-index: 100;
+        }
+
+        .dropdown-content a {
+            color: var(--primary) !important;
+            padding: 10px 20px;
+            display: block;
+            font-size: 0.9rem;
+        }
+
+        .dropdown-content a:hover {
+            background: var(--bg-light);
+            color: var(--secondary) !important;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        header.scrolled .logo-text h2 {
+            color: var(--primary);
+        }
+
+        header.scrolled .mobile-menu-toggle {
+            color: var(--primary);
+        }
+
+        .mobile-menu-toggle {
+            display: none;
+            color: var(--white);
+            font-size: 1.5rem;
+            cursor: pointer;
+            transition: var(--transition);
+        }
+
+        .mobile-nav {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 80%;
+            max-width: 300px;
+            height: 100vh;
+            background: var(--white);
+            z-index: 2000;
+            padding: 30px;
+            box-shadow: -10px 0 30px rgba(0, 0, 0, 0.1);
+            transition: var(--transition);
+            display: flex;
+            flex-direction: column;
+        }
+
+        .mobile-nav.active {
+            right: 0;
+        }
+
+        .mobile-nav-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 40px;
+        }
+
+        .mobile-nav-header img {
+            height: 40px;
+        }
+
+        #mobile-close {
+            font-size: 1.5rem;
+            color: var(--primary);
+            cursor: pointer;
+        }
+
+        .mobile-nav-links {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+        }
+
+        .mobile-nav-links a {
+            font-size: 1.1rem;
+            font-weight: 500;
+            color: var(--primary);
+            padding: 10px 0;
+            border-bottom: 1px solid #eee;
+        }
+
+        .mobile-nav-links a:last-child {
+            border-bottom: none;
+        }
+
+        @media (max-width: 1024px) {
+            .nav-links {
+                display: none;
+            }
+
+            .mobile-menu-toggle {
+                display: block !important;
+            }
+        }
+
+        .courses-hero {
+            background: linear-gradient(rgba(0, 35, 71, 0.8), rgba(0, 35, 71, 0.8)), url('assets/images/courses-bg.jpg');
             background-size: cover;
             padding: 150px 0 80px;
             color: var(--white);
             text-align: center;
         }
 
-        .filter-section {
+        .course-card {
             background: var(--white);
-            padding: 30px;
             border-radius: var(--radius-md);
+            padding: 40px;
+            margin-bottom: 40px;
             box-shadow: var(--shadow-md);
-            margin-top: -50px;
-            position: relative;
-            z-index: 10;
-        }
-
-        .filter-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-        }
-
-        .filter-item label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: 600;
-            font-size: 0.9rem;
-            color: var(--primary);
-        }
-
-        .filter-item select,
-        .filter-item input {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: var(--radius-sm);
-            font-family: inherit;
-        }
-
-        .notes-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 30px;
-            margin-top: 50px;
-        }
-
-        .note-card {
-            background: var(--white);
-            padding: 30px;
-            border-radius: var(--radius-md);
-            box-shadow: var(--shadow-sm);
-            border: 1px solid #eee;
+            display: flex;
+            align-items: center;
+            gap: 40px;
+            border-left: 8px solid var(--secondary);
             transition: var(--transition);
         }
 
-        .note-card:hover {
-            box-shadow: var(--shadow-lg);
-            border-color: var(--secondary);
+        .course-card:hover {
+            transform: translateX(10px);
         }
 
-        .note-type {
-            background: var(--secondary-light);
+        .course-icon {
+            font-size: 4rem;
             color: var(--primary);
-            padding: 3px 10px;
-            border-radius: 4px;
-            font-size: 0.7rem;
-            font-weight: 700;
-            text-transform: uppercase;
+            flex-shrink: 0;
         }
 
-        .note-card h4 {
-            margin: 15px 0 10px;
+        .course-content h3 {
+            font-size: 1.8rem;
             color: var(--primary);
+            margin-bottom: 15px;
         }
 
-        .note-meta {
-            font-size: 0.85rem;
-            color: var(--text-light);
+        .course-meta {
+            display: flex;
+            gap: 20px;
             margin-bottom: 20px;
+            font-weight: 600;
+            color: var(--text-light);
         }
 
-        .note-meta span {
-            display: block;
-            margin-bottom: 5px;
+        .course-meta span i {
+            color: var(--secondary);
+            margin-right: 8px;
         }
 
-        .empty-state {
-            grid-column: 1 / -1;
-            text-align: center;
-            padding: 50px;
+        @media (max-width: 768px) {
+            .course-card {
+                flex-direction: column;
+                text-align: center;
+                gap: 20px;
+            }
         }
     </style>
 </head>
 
 <body>
-    <!-- Include Navbar -->
     <header id="main-header">
         <div class="container">
             <div class="header-inner flex align-center justify-between">
@@ -238,11 +312,11 @@
                     <a href="index.html">Home</a>
                     <a href="about.html">About Us</a>
                     <div class="dropdown" style="display: inline-block; position: relative;">
-                        <a href="javascript:void(0)">Academics <i class="fas fa-chevron-down"
+                        <a href="javascript:void(0)" class="active">Academics <i class="fas fa-chevron-down"
                                 style="font-size: 0.7rem;"></i></a>
                         <div class="dropdown-content">
                             <a href="departments.html">Departments</a>
-                            <a href="courses.html">Courses</a>
+                            <a href="courses.html" class="active">Courses</a>
                             <a href="faculty.html">Faculty</a>
                         </div>
                     </div>
@@ -283,59 +357,67 @@
         </div>
     </header>
 
-    <section class="notes-header">
-        <div class="container">
-            <h1>Digital Notes Library</h1>
-            <p>Access high-quality study materials and resources curated by our expert faculty.</p>
+    <section class="courses-hero">
+        <div class="container" data-aos="fade-up">
+            <h1>Undergraduate Programs</h1>
+            <p>Shape your career with our diverse range of academic courses designed for the modern world.</p>
         </div>
     </section>
 
-    <div class="container">
-        <div class="filter-section">
-            <form id="filter-form" class="filter-grid">
-                <div class="filter-item">
-                    <label>Course</label>
-                    <select name="course" id="filter-course">
-                        <option value="">All Courses</option>
-                        <option value="1">BCA</option>
-                        <option value="2">BA</option>
-                        <option value="3">B.Com</option>
-                        <option value="4">B.Sc</option>
-                    </select>
+    <div class="container section-padding">
+        <div class="course-card" data-aos="fade-up">
+            <div class="course-icon"><i class="fas fa-desktop"></i></div>
+            <div class="course-content">
+                <h3>Bachelor of Computer Applications (BCA)</h3>
+                <div class="course-meta">
+                    <span><i class="fas fa-calendar-alt"></i> Duration: 3 Years</span>
+                    <span><i class="fas fa-graduation-cap"></i> Eligibility: PU-II / 10+2</span>
                 </div>
-                <div class="filter-item">
-                    <label>Semester</label>
-                    <select name="semester" id="filter-semester">
-                        <option value="">All Semesters</option>
-                        <option value="1">Semester 1</option>
-                        <option value="2">Semester 2</option>
-                        <option value="3">Semester 3</option>
-                        <option value="4">Semester 4</option>
-                        <option value="5">Semester 5</option>
-                        <option value="6">Semester 6</option>
-                    </select>
-                </div>
-                <div class="filter-item">
-                    <label>Search Subject</label>
-                    <input type="text" name="subject" id="filter-subject" placeholder="e.g. Data Structures">
-                </div>
-                <div class="filter-item" style="display: flex; align-items: flex-end;">
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Apply Filters</button>
-                </div>
-            </form>
+                <p>Focuses on computer science fundamentals, software development, web technologies, and database
+                    management. Includes practical training in modern programming languages.</p>
+            </div>
         </div>
 
-        <div class="section-padding">
-            <div class="notes-grid" id="notes-container">
-                <div class="empty-state">
-                    <i class="fas fa-spinner fa-spin" style="font-size: 3rem; color: var(--primary);"></i>
-                    <p style="margin-top: 20px;">Loading notes...</p>
+        <div class="course-card" data-aos="fade-up">
+            <div class="course-icon"><i class="fas fa-calculator"></i></div>
+            <div class="course-content">
+                <h3>Bachelor of Commerce (B.Com)</h3>
+                <div class="course-meta">
+                    <span><i class="fas fa-calendar-alt"></i> Duration: 3 Years</span>
+                    <span><i class="fas fa-graduation-cap"></i> Eligibility: PU-II / 10+2</span>
                 </div>
+                <p>A comprehensive program covering accounting, finance, taxation, business law, and management.
+                    Prepares students for roles in banking, insurance, and corporate sectors.</p>
+            </div>
+        </div>
+
+        <div class="course-card" data-aos="fade-up">
+            <div class="course-icon"><i class="fas fa-flask"></i></div>
+            <div class="course-content">
+                <h3>Bachelor of Science (B.Sc)</h3>
+                <div class="course-meta">
+                    <span><i class="fas fa-calendar-alt"></i> Duration: 3 Years</span>
+                    <span><i class="fas fa-graduation-cap"></i> Eligibility: PU-II Science</span>
+                </div>
+                <p>Offers specializations in Physics, Chemistry, Mathematics, and Computer Science. Emphasizes
+                    experimental learning and scientific inquiry.</p>
+            </div>
+        </div>
+
+        <div class="course-card" data-aos="fade-up">
+            <div class="course-icon"><i class="fas fa-palette"></i></div>
+            <div class="course-content">
+                <h3>Bachelor of Arts (BA)</h3>
+                <div class="course-meta">
+                    <span><i class="fas fa-calendar-alt"></i> Duration: 3 Years</span>
+                    <span><i class="fas fa-graduation-cap"></i> Eligibility: PU-II / 10+2</span>
+                </div>
+                <p>Focuses on humanities, languages, and social sciences. Encourages critical thinking and deep
+                    understanding of human society and culture.</p>
             </div>
         </div>
     </div>
 
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-grid">
@@ -394,75 +476,7 @@
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>AOS.init({ duration: 800, once: true });</script>
-    <script src="assets/js/api.js"></script>
     <script src="assets/js/main.js"></script>
-    <script>
-        const notesContainer = document.getElementById('notes-container');
-        const filterForm = document.getElementById('filter-form');
-
-        async function loadNotes(filters = {}) {
-            try {
-                const params = new URLSearchParams();
-                if (filters.course) params.append('course', filters.course);
-                if (filters.semester) params.append('semester', filters.semester);
-                if (filters.subject) params.append('subject', filters.subject);
-
-                const url = `${API_BASE_URL}/notes?${params.toString()}`;
-                const response = await fetch(url);
-                const notes = await response.json();
-
-                if (notes.length === 0) {
-                    notesContainer.innerHTML = `
-                    <div class="empty-state">
-                        <i class="fas fa-folder-open" style="font-size: 4rem; color: #ddd; margin-bottom: 20px;"></i>
-                        <h3>No notes found</h3>
-                        <p>Try adjusting your filters or search keywords.</p>
-                    </div>
-                `;
-                    return;
-                }
-
-                notesContainer.innerHTML = notes.map(note => `
-                <div class="note-card" data-aos="fade-up">
-                    <span class="note-type">PDF</span>
-                    <h4>${note.title}</h4>
-                    <div class="note-meta">
-                        <span><i class="fas fa-book-open"></i> Subject: ${note.subject}</span>
-                        <span><i class="fas fa-layer-group"></i> Unit: ${note.unit}</span>
-                        <span><i class="fas fa-clock"></i> Uploaded: ${formatDate(note.upload_date)}</span>
-                    </div>
-                    <div class="flex">
-                        <a href="${resolvePath(note.file_path)}" class="btn btn-outline" style="padding: 8px 15px; font-size: 0.9rem; flex: 1; margin-right: 10px;" target="_blank">View</a>
-                        <a href="${resolvePath(note.file_path)}" class="btn btn-primary" style="padding: 8px 15px; font-size: 0.9rem; flex: 1;" download>Download</a>
-                    </div>
-                </div>
-            `).join('');
-
-                AOS.refresh();
-            } catch (error) {
-                console.error('Failed to load notes:', error);
-                notesContainer.innerHTML = `
-                <div class="empty-state">
-                    <i class="fas fa-exclamation-triangle" style="font-size: 4rem; color: #d9534f; margin-bottom: 20px;"></i>
-                    <h3>Error loading notes</h3>
-                    <p>Please try again later.</p>
-                </div>
-            `;
-            }
-        }
-
-        filterForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-            loadNotes({
-                course: document.getElementById('filter-course').value,
-                semester: document.getElementById('filter-semester').value,
-                subject: document.getElementById('filter-subject').value
-            });
-        });
-
-        // Load notes on page load
-        document.addEventListener('DOMContentLoaded', () => loadNotes());
-    </script>
 </body>
 
 </html>
