--- a/frontend/gallery.html
+++ b/frontend/gallery.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Study Notes & Resources - SVES College Harugeri">
-    <title>Notes & Resources | SVES College</title>
+    <meta name="description" content="College Gallery - SVES College Harugeri">
+    <title>Gallery | SVES College</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -124,104 +124,92 @@
             }
         }
 
-        .notes-header {
-            background: linear-gradient(rgba(0, 35, 71, 0.9), rgba(0, 35, 71, 0.9)), url('assets/images/notes-bg.jpg');
+        .gallery-header {
+            background: linear-gradient(rgba(0, 35, 71, 0.9), rgba(0, 35, 71, 0.9)), url('assets/images/gallery-bg.jpg');
             background-size: cover;
             padding: 150px 0 80px;
             color: var(--white);
             text-align: center;
         }
 
-        .filter-section {
-            background: var(--white);
-            padding: 30px;
-            border-radius: var(--radius-md);
-            box-shadow: var(--shadow-md);
-            margin-top: -50px;
-            position: relative;
-            z-index: 10;
+        .gallery-nav {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            margin-bottom: 40px;
+            flex-wrap: wrap;
         }
 
-        .filter-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-        }
-
-        .filter-item label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: 600;
-            font-size: 0.9rem;
-            color: var(--primary);
-        }
-
-        .filter-item select,
-        .filter-item input {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ddd;
-            border-radius: var(--radius-sm);
-            font-family: inherit;
-        }
-
-        .notes-grid {
+        .gallery-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 30px;
-            margin-top: 50px;
+            gap: 25px;
         }
 
-        .note-card {
-            background: var(--white);
-            padding: 30px;
+        .gallery-item {
+            position: relative;
             border-radius: var(--radius-md);
+            overflow: hidden;
             box-shadow: var(--shadow-sm);
-            border: 1px solid #eee;
+            height: 250px;
+            cursor: pointer;
             transition: var(--transition);
         }
 
-        .note-card:hover {
+        .gallery-item:hover {
+            transform: scale(1.02);
             box-shadow: var(--shadow-lg);
-            border-color: var(--secondary);
         }
 
-        .note-type {
-            background: var(--secondary-light);
-            color: var(--primary);
-            padding: 3px 10px;
-            border-radius: 4px;
-            font-size: 0.7rem;
-            font-weight: 700;
-            text-transform: uppercase;
+        .gallery-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
         }
 
-        .note-card h4 {
-            margin: 15px 0 10px;
-            color: var(--primary);
+        .gallery-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 35, 71, 0.7);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            opacity: 0;
+            transition: var(--transition);
+            color: var(--white);
+            padding: 20px;
+            text-align: center;
         }
 
-        .note-meta {
-            font-size: 0.85rem;
-            color: var(--text-light);
-            margin-bottom: 20px;
+        .gallery-item:hover .gallery-overlay {
+            opacity: 1;
         }
 
-        .note-meta span {
-            display: block;
+        .gallery-overlay h4 {
+            font-size: 1.1rem;
             margin-bottom: 5px;
         }
 
-        .empty-state {
+        .gallery-overlay span {
+            font-size: 0.8rem;
+            color: var(--secondary);
+            text-transform: uppercase;
+            font-weight: 600;
+        }
+
+        .loading-container {
             grid-column: 1 / -1;
-            text-align: center;
             padding: 50px;
+            text-align: center;
         }
     </style>
 </head>
 
 <body>
-    <!-- Include Navbar -->
     <header id="main-header">
         <div class="container">
             <div class="header-inner flex align-center justify-between">
@@ -248,7 +236,7 @@
                     </div>
                     <a href="student-corner.html">Student Corner</a>
                     <a href="notes.html">Notes & Resources</a>
-                    <a href="gallery.html">Gallery</a>
+                    <a href="gallery.html" class="active">Gallery</a>
                     <a href="admin/login.html">Admin Login</a>
                     <a href="admissions.html" class="btn btn-secondary"
                         style="padding: 8px 20px; color: var(--primary) !important;">Apply Now</a>
@@ -283,59 +271,30 @@
         </div>
     </header>
 
-    <section class="notes-header">
-        <div class="container">
-            <h1>Digital Notes Library</h1>
-            <p>Access high-quality study materials and resources curated by our expert faculty.</p>
+    <section class="gallery-header">
+        <div class="container" data-aos="fade-up">
+            <h1>Moments at SVES</h1>
+            <p>Capturing the essence of campus life, academic achievements, and cultural celebrations.</p>
         </div>
     </section>
 
-    <div class="container">
-        <div class="filter-section">
-            <form id="filter-form" class="filter-grid">
-                <div class="filter-item">
-                    <label>Course</label>
-                    <select name="course" id="filter-course">
-                        <option value="">All Courses</option>
-                        <option value="1">BCA</option>
-                        <option value="2">BA</option>
-                        <option value="3">B.Com</option>
-                        <option value="4">B.Sc</option>
-                    </select>
-                </div>
-                <div class="filter-item">
-                    <label>Semester</label>
-                    <select name="semester" id="filter-semester">
-                        <option value="">All Semesters</option>
-                        <option value="1">Semester 1</option>
-                        <option value="2">Semester 2</option>
-                        <option value="3">Semester 3</option>
-                        <option value="4">Semester 4</option>
-                        <option value="5">Semester 5</option>
-                        <option value="6">Semester 6</option>
-                    </select>
-                </div>
-                <div class="filter-item">
-                    <label>Search Subject</label>
-                    <input type="text" name="subject" id="filter-subject" placeholder="e.g. Data Structures">
-                </div>
-                <div class="filter-item" style="display: flex; align-items: flex-end;">
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Apply Filters</button>
-                </div>
-            </form>
+    <div class="container section-padding">
+        <div class="gallery-nav" data-aos="fade-up">
+            <button class="filter-btn active" onclick="filterGallery('All')">All Photos</button>
+            <button class="filter-btn" onclick="filterGallery('Events')">Events</button>
+            <button class="filter-btn" onclick="filterGallery('Campus')">Campus</button>
+            <button class="filter-btn" onclick="filterGallery('Academic')">Academic</button>
+            <button class="filter-btn" onclick="filterGallery('Sports')">Sports</button>
         </div>
 
-        <div class="section-padding">
-            <div class="notes-grid" id="notes-container">
-                <div class="empty-state">
-                    <i class="fas fa-spinner fa-spin" style="font-size: 3rem; color: var(--primary);"></i>
-                    <p style="margin-top: 20px;">Loading notes...</p>
-                </div>
+        <div class="gallery-grid" id="gallery-container">
+            <div class="loading-container">
+                <i class="fas fa-spinner fa-spin fa-3x" style="color: var(--primary);"></i>
+                <p style="margin-top: 15px;">Loading gallery...</p>
             </div>
         </div>
     </div>
 
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="footer-grid">
@@ -397,71 +356,59 @@
     <script src="assets/js/api.js"></script>
     <script src="assets/js/main.js"></script>
     <script>
-        const notesContainer = document.getElementById('notes-container');
-        const filterForm = document.getElementById('filter-form');
+        const galleryContainer = document.getElementById('gallery-container');
+        let allImages = [];
 
-        async function loadNotes(filters = {}) {
+        async function loadGallery() {
             try {
-                const params = new URLSearchParams();
-                if (filters.course) params.append('course', filters.course);
-                if (filters.semester) params.append('semester', filters.semester);
-                if (filters.subject) params.append('subject', filters.subject);
+                const response = await fetch(API_BASE_URL + '/gallery');
+                allImages = await response.json();
+                renderGallery(allImages);
+            } catch (error) {
+                console.error('Failed to load gallery:', error);
+                galleryContainer.innerHTML = '<div class="loading-container"><p style="color:red;">Error loading gallery images.</p></div>';
+            }
+        }
 
-                const url = `${API_BASE_URL}/notes?${params.toString()}`;
-                const response = await fetch(url);
-                const notes = await response.json();
+        function renderGallery(data) {
+            if (data.length === 0) {
+                galleryContainer.innerHTML = '<div class="loading-container"><p>No images found in this category.</p></div>';
+                return;
+            }
 
-                if (notes.length === 0) {
-                    notesContainer.innerHTML = `
-                    <div class="empty-state">
-                        <i class="fas fa-folder-open" style="font-size: 4rem; color: #ddd; margin-bottom: 20px;"></i>
-                        <h3>No notes found</h3>
-                        <p>Try adjusting your filters or search keywords.</p>
-                    </div>
-                `;
-                    return;
-                }
-
-                notesContainer.innerHTML = notes.map(note => `
-                <div class="note-card" data-aos="fade-up">
-                    <span class="note-type">PDF</span>
-                    <h4>${note.title}</h4>
-                    <div class="note-meta">
-                        <span><i class="fas fa-book-open"></i> Subject: ${note.subject}</span>
-                        <span><i class="fas fa-layer-group"></i> Unit: ${note.unit}</span>
-                        <span><i class="fas fa-clock"></i> Uploaded: ${formatDate(note.upload_date)}</span>
-                    </div>
-                    <div class="flex">
-                        <a href="${resolvePath(note.file_path)}" class="btn btn-outline" style="padding: 8px 15px; font-size: 0.9rem; flex: 1; margin-right: 10px;" target="_blank">View</a>
-                        <a href="${resolvePath(note.file_path)}" class="btn btn-primary" style="padding: 8px 15px; font-size: 0.9rem; flex: 1;" download>Download</a>
+            galleryContainer.innerHTML = data.map(img => `
+                <div class="gallery-item" data-aos="zoom-in" onclick="viewImage('${resolvePath(img.image_path)}')">
+                    <img src="${resolvePath(img.image_path)}" alt="${img.caption}">
+                    <div class="gallery-overlay">
+                        <span>${img.category}</span>
+                        <h4>${img.caption}</h4>
+                        <i class="fas fa-search-plus" style="margin-top: 10px;"></i>
                     </div>
                 </div>
             `).join('');
 
-                AOS.refresh();
-            } catch (error) {
-                console.error('Failed to load notes:', error);
-                notesContainer.innerHTML = `
-                <div class="empty-state">
-                    <i class="fas fa-exclamation-triangle" style="font-size: 4rem; color: #d9534f; margin-bottom: 20px;"></i>
-                    <h3>Error loading notes</h3>
-                    <p>Please try again later.</p>
-                </div>
-            `;
+            AOS.refresh();
+        }
+
+        function filterGallery(category) {
+            // Update active state of buttons
+            document.querySelectorAll('.filter-btn').forEach(btn => {
+                btn.classList.toggle('active', btn.textContent === (category === 'All' ? 'All Photos' : category));
+            });
+
+            if (category === 'All') {
+                renderGallery(allImages);
+            } else {
+                const filtered = allImages.filter(img => img.category === category);
+                renderGallery(filtered);
             }
         }
 
-        filterForm.addEventListener('submit', (e) => {
-            e.preventDefault();
-            loadNotes({
-                course: document.getElementById('filter-course').value,
-                semester: document.getElementById('filter-semester').value,
-                subject: document.getElementById('filter-subject').value
-            });
-        });
+        function viewImage(url) {
+            window.open(url, '_blank');
+        }
 
-        // Load notes on page load
-        document.addEventListener('DOMContentLoaded', () => loadNotes());
+        document.addEventListener('DOMContentLoaded', loadGallery);
     </script>
 </body>
 
